<resources>
    <string name="app_name">CACHC App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnLearn">Learn</string>
    <string name="btnSupport">Support</string>
    <string name="btnServices">Services</string>
    <string name="btnShare">Share</string>
    <string name="btnReport">Report</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="btnTwitter">Twitter</string>
    <string name="btnFacebook">Facebook</string>
    <string name="btnCallVolunteer">(626) 331-6700</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="btnCallOrList" />
    <string-array name="state_names">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="title_activity_share">ShareActivity</string>
    <string name="btnShareHotline">Share A Hotline</string>
    <string name="btnShareApp">Share This App</string>
    <string name="title_activity_share_hotline">ShareHotlineActivity</string>
    <string name="title_activity_california_report">CaliforniaReportActivity</string>
    <string name="btnCaliforniaCall" />
    <string-array name="county_names">
        <item>Alameda</item>
        <item>Alpine</item>
        <item>Amador</item>
        <item>Butte</item>
        <item>Calaveras</item>
        <item>Colusa</item>
        <item>Contra Costa</item>
        <item>Del Norte</item>
        <item>El Dorado</item>
        <item>Fresno</item>
        <item>Glenn</item>
        <item>Humboldt</item>
        <item>Imperial</item>
        <item>Inyo</item>
        <item>Kern</item>
        <item>Kings</item>
        <item>Lake</item>
        <item>Lassen</item>
        <item>Los Angeles</item>
        <item>Madera</item>
        <item>Marin</item>
        <item>Mariposa</item>
        <item>Mendocino</item>
        <item>Merced</item>
        <item>Modoc</item>
        <item>Mono</item>
        <item>Monterey</item>
        <item>Napa</item>
        <item>Nevada</item>
        <item>Orange</item>
        <item>Placer</item>
        <item>Plumas</item>
        <item>Riverside</item>
        <item>Sacramento</item>
        <item>San Benito</item>
        <item>San Bernadino</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Joaquin</item>
        <item>San Luis Obispo</item>
        <item>San Mateo</item>
        <item>Santa Barbara</item>
        <item>Santa Clara</item>
        <item>Santa Cruz</item>
        <item>"Shasta</item>
        <item>Sierra</item>
        <item>Siskiyou</item>
        <item>Solano</item>
        <item>Sonoma</item>
        <item>Stanislaus</item>
        <item>Sutter</item>
        <item>Tehema</item>
        <item>Trinity</item>
        <item>Tulare</item>
        <item>Tuolumne</item>
        <item>Ventura</item>
        <item>Yolo</item>
        <item>Yuba</item>
    </string-array>
    <string name="title_activity_california_share_hotline">CaliforniaShareHotlineActivity</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="btnSendSMS">Send Message</string>
    <string name="btnDonate">Donate</string>
</resources>
