<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ecarroll.cachcapp.SupportActivity"
    android:background="#fff6e6ae">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Follow us:"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTwitter"
        android:id="@+id/btnTwitter"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFacebook"
        android:id="@+id/btnFacebook"
        android:layout_below="@+id/btnTwitter"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnTwitter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCallVolunteer"
        android:id="@+id/btnEmail"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnFacebook" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:layout_above="@+id/btnEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="Call us to volunteer:" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDonate"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnEmail"
        android:layout_marginBottom="7dp"
        android:text="@string/btnDonate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Donate with PayPal:"
        android:id="@+id/textView4"
        android:layout_above="@+id/btnDonate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />
</RelativeLayout>
